--- a/QinCloud/manifest.json
+++ b/QinCloud/manifest.json
@@ -206,7 +206,8 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"js/HttpCore/HttpBase.js"
+					"js/HttpCore/HttpBase.js",
+					"js/jquery-3.0.0.min.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -218,7 +219,6 @@
 				"study/powerPoint.html",
 				"resource/3.jpg",
 				"resource/1.jpg",
-				"js/jquery-3.0.0.min.js",
 				"js/getDate.js",
 				"study/bar.jpg",
 				"css/animate.css",
