--- a/QinCloud/manifest.json
+++ b/QinCloud/manifest.json
@@ -229,12 +229,18 @@
 					"res/images/qq.png",
 					"res/images/weixin.png",
 					"js/app.js",
-					"js/mui.enterfocus.js"
+					"js/mui.enterfocus.js",
+					"js/System/systemswitch.js",
+					"js/jquery-3.0.0.min.js",
+					"js/Connectors/ConnectLogin.js",
+					"js/HttpCore/HttpBase.js",
+					"js/System/SystemSwitch.js"
 				],
 				"refer": [
 					"main.html",
 					"login/register.html",
-					"login/main.html"
+					"login/main.html",
+					"login/forget_password.html"
 				]
 			},
 			"login/main.html": {
@@ -243,6 +249,25 @@
 					"js/mui.min.js",
 					"css/mui.min.css",
 					"css/style.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"login/register.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"js/mui.min.js",
+					"js/jquery-3.0.0.min.js",
+					"css/mui.min.css",
+					"js/Connectors/ConnectLogin.js",
+					"js/HttpCore/HttpBase.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"login/forget_password.html": {
+				"resources": [
+					"js/app.js"
 				],
 				"refer": [],
 				"priority": 0
